# SaperV4

./: CMakeLists.txt
inc/: field.h  sapermap.h
src/: field.cpp  sapermap.cpp
tests/: boardtest.cpp  field.cpp  main.cpp
